--- a/src/main/resources/templates/admin_panel/_category.html
+++ b/src/main/resources/templates/admin_panel/_category.html
@@ -193,33 +193,33 @@
                                 <div class="product_content">
                                     <div class="row order - row collapsible">
                                         <div class="col-lg-2 col-md-2 col-xs-6">
-                                            <div class="profile-order-text">
+                                            <div class="profile-order-text vertical_center">
                                                 <td class="category-id" th:text="${category.getId()}"></td>
                                             </div>
                                         </div>
 
                                         <div class="col-lg-3 col-md-3 col-xs-6">
-                                            <div class="profile-order-text">
+                                            <div class="profile-order-text vertical_center">
                                                 <td class="category-name" th:text="${category.getName()}"></td>
                                             </div>
                                         </div>
 
                                         <div class="col-lg-3 col-md-3 col-xs-6">
-                                            <div class="profile-order-text">
+                                            <div class="profile-order-text vertical_center">
                                                 <td class="category-type"
                                                     th:text="#{${'category.' + category.getProductType()}}"></td>
                                             </div>
                                         </div>
 
                                         <div class="col-lg-2 col-md-2 col-xs-6">
-                                            <div class="profile-order-text">
+                                            <div class="profile-order-text vertical_center">
                                                 <td class="category-itemNum"
                                                     th:text="${category.getBooks().size()}"></td>
                                             </div>
                                         </div>
 
                                         <div class="col-lg-2 col-md-2 col-xs-6">
-                                            <div class="profile-order-text">
+                                            <div class="profile-order-text vertical_center">
                                                 <td class="category-subcategory-size"
                                                     th:text="${category.getSubcategories().size()}"></td>
                                             </div>
