--- a/src/main/resources/templates/admin_panel/_product.html
+++ b/src/main/resources/templates/admin_panel/_product.html
@@ -1522,37 +1522,37 @@
                             <div class="product_content">
                                 <div class="row order - row collapsible">
                                     <div class="col-lg-2 col-md-2 col-xs-4">
-                                        <div class="profile-order-text">
+                                        <div class="profile-order-text vertical_center">
                                             <td th:text="${product.productId}"></td>
                                         </div>
                                     </div>
 
                                     <div class="col-lg-2 col-md-2 col-xs-4">
-                                        <div class="profile-order-text">
+                                        <div class="profile-order-text vertical_center">
                                             <td th:text="${product.productName}"></td>
                                         </div>
                                     </div>
 
                                     <div class="col-lg-2 col-md-2 col-xs-4">
-                                        <div class="profile-order-text">
+                                        <div class="profile-order-text vertical_center">
                                             <td th:text="${product.getProductTypeName()}"></td>
                                         </div>
                                     </div>
 
                                     <div class="col-lg-2 col-md-2 col-xs-4">
-                                        <div class="profile-order-text">
+                                        <div class="profile-order-text vertical_center">
                                             <td th:text="${product.price} +  ' ₺'"></td>
                                         </div>
                                     </div>
 
                                     <div class="col-lg-2 col-md-2 col-xs-4">
-                                        <div class="profile-order-text">
+                                        <div class="profile-order-text vertical_center">
                                             <td th:text="${product.barcode}"></td>
                                         </div>
                                     </div>
 
                                     <div class="col-lg-2 col-md-2 col-xs-4">
-                                        <div class="profile-order-text">
+                                        <div class="profile-order-text vertical_center">
                                             <td th:text="${product.stock}"></td>
                                         </div>
                                     </div>
