subcategory tabs texts vertically centered

--- a/src/main/resources/templates/subcategory_details/_subcategory.html
+++ b/src/main/resources/templates/subcategory_details/_subcategory.html
@@ -142,24 +142,24 @@
                                     <div class="product_content">
                                         <div class="row order - row collapsible">
                                             <div class="col-lg-3 col-md-3 col-xs-6">
-                                                <div class="profile-order-text">
+                                                <div class="profile-order-text vertical_center">
                                                     <td th:text="${subcategory.id}"></td>
                                                 </div>
                                             </div>
                                             <div class="col-lg-3 col-md-3 col-xs-6">
-                                                <div class="profile-order-text">
+                                                <div class="profile-order-text vertical_center">
                                                     <td th:text="${subcategory.name}"></td>
                                                 </div>
                                             </div>
 
                                             <div class="col-lg-3 col-md-3 col-xs-6">
-                                                <div class="profile-order-text">
+                                                <div class="profile-order-text vertical_center">
                                                     <td th:text="${subcategory.itemNum}"></td>
                                                 </div>
                                             </div>
 
                                             <div class="col-lg-3 col-md-3 col-xs-6">
-                                                <div class="profile-order-text">
+                                                <div class="profile-order-text vertical_center">
                                                     <td th:text="${subcategory.subcategories.size()}"></td>
                                                 </div>
                                             </div>
